# csp_solver

./: .clang-format  .gitignore  CMakeLists.txt  README.md  array.h  csp.cpp  csp.h  csp.sublime-project  csp.sublime-workspace  csp_solve.h  example.cpp  gac3.h  init.sh  main  main.cpp  makefile  stack_allocator.h
csp_solver/csp_solver.xcodeproj/: project.pbxproj
csp_solver/csp_solver.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
csp_solver/csp_solver.xcodeproj/project.xcworkspace/xcuserdata/giacomo.xcuserdatad/: UserInterfaceState.xcuserstate
csp_solver/csp_solver.xcodeproj/project.xcworkspace/xcuserdata/giacomonazzaro.xcuserdatad/: UserInterfaceState.xcuserstate
csp_solver/csp_solver.xcodeproj/xcuserdata/giacomo.xcuserdatad/xcschemes/: csp_solver.xcscheme  xcschememanagement.plist
csp_solver/csp_solver.xcodeproj/xcuserdata/giacomonazzaro.xcuserdatad/xcschemes/: xcschememanagement.plist
examples/: CMakeLists.txt  edge_coloring.cpp  local_nqueens.cpp  makefile  nqueens.cpp  pipes.cpp  run.sh  sudoku.cpp  tiles.cpp
utils/: array.h  array_algorithms.h  array_std_interface.h  memory_arena.h  stack_allocator.h  string.h  table.h  update.sh
